Closed Bug 206027 Opened 23 years ago Closed 23 years ago

Cut n paste from Powerpoint into mail compose does not work.

Categories

(Core :: DOM: Copy & Paste and Drag & Drop, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.4final

People

(Reporter: nisheeth_mozilla, Assigned: nisheeth_mozilla)

Details

Attachments

(1 file)

About to attach a patch from Harish that fixes the problem.
Attached patch PatchSplinter Review
Fix to htmlparser that initializes the tag type of the CDataSection token. This helps the parser construct the right content model when it sees a "<! blah>" tag in the head of a document. Powerpoint uses such markup in the HTML it puts on the clipboard in a cut n paste operation.
Comment on attachment 123566 [details] [diff] [review] Patch Harish, please r=. Jst, please sr=. Please see comment 2 on this bug for more info. Thanks!
Attachment #123566 - Flags: superreview?(jst)
Attachment #123566 - Flags: review?(harishd)
Comment on attachment 123566 [details] [diff] [review] Patch sr=jst
Attachment #123566 - Flags: superreview?(jst) → superreview+
Comment on attachment 123566 [details] [diff] [review] Patch r=harishd
Attachment #123566 - Flags: review?(harishd) → review+
Comment on attachment 123566 [details] [diff] [review] Patch Drivers, please approve the checkin of this patch into 1.4. It makes cut n paste from Powerpoint into Mozilla work. Harish came up with this patch to the parser and thinks that it is a low risk change. I agree.
Attachment #123566 - Flags: approval1.4?
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.4final
Comment on attachment 123566 [details] [diff] [review] Patch a=mkaply for checkin to to 1.4
Attachment #123566 - Flags: approval1.4? → approval1.4+
Checked into trunk: Checking in public/nsHTMLTokens.h; /cvsroot/mozilla/htmlparser/public/nsHTMLTokens.h,v <-- nsHTMLTokens.h new revision: 1.16; previous revision: 1.15 done Checking in src/nsDTDUtils.cpp; /cvsroot/mozilla/htmlparser/src/nsDTDUtils.cpp,v <-- nsDTDUtils.cpp new revision: 3.140; previous revision: 3.139 done Checking in src/nsHTMLTokens.cpp; /cvsroot/mozilla/htmlparser/src/nsHTMLTokens.cpp,v <-- nsHTMLTokens.cpp new revision: 3.234; previous revision: 3.233 done
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: