Fix for bug 206027.  r=harishd@netscape.com, sr=jst@netscape.com, a=mkaply@us.ibm.com.  Make cut n paste from Powerpoint into Mozilla work properly.