htmlparser/src/nsDTDUtils.cpp
@@ -1366,7 +1366,7 @@ CToken* nsTokenAllocator::CreateTokenOfType(eHTMLTokenTypes aType,eHTMLTags aTag
     case eToken_script:           result=new(mArenaPool) CScriptToken(); break;
     case eToken_style:            result=new(mArenaPool) CStyleToken(); break;
     case eToken_instruction:      result=new(mArenaPool) CInstructionToken(); break;
-    case eToken_cdatasection:     result=new(mArenaPool) CCDATASectionToken(); break;
+    case eToken_cdatasection:     result=new(mArenaPool) CCDATASectionToken(aTag); break;
     case eToken_error:            result=new(mArenaPool) CErrorToken(); break;
     case eToken_doctypeDecl:      result=new(mArenaPool) CDoctypeDeclToken(aTag); break;
     case eToken_markupDecl:       result=new(mArenaPool) CMarkupDeclToken(); break;
